--- a/clone.html
+++ b/clone.html
@@ -269,18 +269,22 @@
 
         <!-- footer section  -->
 
-        <div class="foot">
-            <div class="f-hr-one">
-                <hr>
+        <div class="foot-main">
+            <div class="foot">
+                <div class="f-hr-one">
+                    <hr>
+                </div>
+                <div class="f-logo-one"> 
+                    <img src="./image/logo.JPG" alt="" width="100%" height="100%">
+                </div>
+                <div class="f-hr-one">
+                    <hr>
+                </div>
             </div>
-            <div class="f-logo-one"> 
-                <img src="./image/logo.JPG" alt="" width="100%" height="100%">
-            </div>
-            <div class="f-hr-one">
-                <hr>
-            </div>
+            <div class="copy">
+                &copy;Rahul Shinde
+           </div>
         </div>
-
     </div>
 </body>
 
